--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <a href="">Sobre a Guild</a>
         <a href="">Facções</a>
         <a href="">Itens</a>
-        <a href="">Personagens</a>
+        <a href="personagem.html">Personagens</a>
         <a href="">Download</a>
         <a href="">Social</a>
     </header>
     <main>
-        <section class="hero">
+        <section class="container">
             <a href="https://discord.gg/2AzhYaxxnk">
-                <button class="hero-button">
+                <button class="container-button">
                     <p class="playwrapper">Entre em nosso Discord</p>
                 </button>
             </a>
