--- a/personagem.html
+++ b/personagem.html
@@ -21,11 +21,21 @@
         <a href="">Social</a>
     </header>
     <main>
+        </section>
         <section class="container-person">
+            <div class="container-video">
+                <video autoplay loop muted playsinline>
+                    <source src="./assets/videos/personagens.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="title-video">
+                <h2>Personagens</h2>
+            </div>
+        </section>
             <div class="container-person-archer">
-                <img src="./assets/personagens/archer-draxian.gif" alt="archer">
-                <h1>Arqueiro</h1>
-                <p>Desde tenra idade, o Arqueiro Draxiano é treinado para dominar a arte de empunhar o arco. Eles são capazes de causar grandes danos a longa distância. Além de sua habilidade com armas, eles são a classe mais rápida e ágil do jogo. Seu herói de classe é Drexx, o maior arqueiro.</p>
+                <img class="container-img" src="./assets/personagens/archer-draxian.gif" alt="archer">
+                <h2>Arqueiro</h2>
+                <p class="paragraph">Desde tenra idade, o Arqueiro Draxiano é treinado para dominar a arte de empunhar o arco. Eles são capazes de causar grandes danos a longa distância. Além de sua habilidade com armas, eles são a classe mais rápida e ágil do jogo. Seu herói de classe é Drexx, o maior arqueiro.</p>
             </div>
         </section>
     </main>
