--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Document</title>
+    <title>Kaion Tale</title>
 </head>
 <body>
     <header class="cabecalho">
@@ -26,6 +25,21 @@
                 </button>
             </a>
         </section>
+        <div class="slide-container">
+            <div class="slide-content">
+                <div class="card-wtapper">
+                    <div class="card">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="./assets/personagens/archer.gif" alt="archer" class="card-img">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
