--- a/index.html
+++ b/index.html
@@ -7,24 +7,8 @@
     <link rel="stylesheet" href="styles/style.css">
     <title>Kaion Tale</title>
 </head>
-<body>
-    <header class="cabecalho">
-        <img src="./assets/DAMAGE.png" alt="logo">
-        <a href="">Sobre a Guild</a>
-        <a href="">Facções</a>
-        <a href="">Itens</a>
-        <a href="personagem.html">Personagens</a>
-        <a href="">Download</a>
-        <a href="">Social</a>
-    </header>
-    <main>
-        <section class="container">
-            <a href="https://discord.gg/2AzhYaxxnk">
-                <button class="container-button">
-                    <p class="playwrapper">Entre em nosso Discord</p>
-                </button>
-            </a>
-        </section>
+<main>
+    <body>
         <div class="slide-container">
             <div class="slide-content">
                 <div class="card-wtapper">
@@ -35,6 +19,12 @@
                             <div class="card-image">
                                 <img src="./assets/personagens/archer.gif" alt="archer" class="card-img">
                             </div>
+                        </div>
+                        <div class="card-content">
+                            <h2 class="name">Archer</h2>
+                            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum sequi aliquam voluptatum reprehenderit pariatur laborum, obcaecati officia animi itaque ab ea blanditiis atque consequatur error, aliquid vero eius qui ut!</p>
+
+                            <button class="button">Veja mais</button>
                         </div>
                     </div>
                 </div>
